# acestep-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: pr-build.yml  release-plugins.yml
ml-bridge/: BUILD_AND_CI.md  DEBUGGING.md  DESIGN.md  README.md
ml-bridge/plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginPreview.cpp  PluginPreview.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-installer-pkg.sh
